syntax = "proto3";

option csharp_namespace = "Avalanche.Grpc.Proto";

package Avalanche.Sales;

message IntentPaymentProto {

  message Request {
    
    string PlanId = 1;
    
    string TicketId = 2;

    uint32 AvailableInDays = 3;
  }

  message Response {
    string OrderId = 1;
    
    uint32 Amount = 2;
    uint32 AmountReceived = 3;   
    
    bool IsPaymentFullFilled = 4;
  }
}

message ReceivePaymentProto {

  message Request {

    string OrderId = 1;

    uint32 Amount = 2;
  }

  message Response {
    bool IsPaymentFullFilled = 1;
  }
}

service OrderServiceProto {

  rpc Receive(ReceivePaymentProto.Request) returns (ReceivePaymentProto.Response);
  rpc Intent(IntentPaymentProto.Request) returns (IntentPaymentProto.Response);
}